# StellarProof

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  STYLE-GUIDE.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
.husky/: pre-push
backend/: .env.example  .gitignore  CONTRIBUTING.md  package.json  tsconfig.json
backend/src/: index.ts
contracts/: IMPLEMENTATION.md
contracts/oracle/: Cargo.toml
contracts/provenance/: Cargo.toml  DEPLOYMENT.md  deploy.sh
contracts/registry/: Cargo.toml
contracts/registry/src/: lib.rs  test.rs
contracts/registry/test_snapshots/test/: test_add_tee_hash_emits_event.1.json  test_add_tee_hash_multiple_hashes.1.json  test_add_tee_hash_stores_hash.1.json  test_already_initialized_fails.1.json  test_invalid_attestation.1.json  test_invalid_signature.1.json  test_invalid_tee_hash.1.json  test_registry_events.1.json  test_successful_verification.1.json  test_unauthorized_provider.1.json
docs/: registry_events.md  verification_pipeline.md
frontend/: jest.config.js  package.json  pnpm-lock.yaml  setupTests.ts  tailwind.config.js  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: About.tsx  CallToAction.tsx  Ecosystem.tsx  Footer.tsx  Header.tsx  Hero.tsx  HeroSection.tsx  HowItWorks.tsx  KeyValueBuilder.tsx  ManifestGeneratorModal.tsx  Navigation.tsx  Sections.tsx  ThemeToggle.tsx  UseCases.tsx  WalletModal.tsx
frontend/config/: network.ts
frontend/context/: ToastContext.tsx  WalletContext.tsx  WizardContext.tsx
(+96 files in other folders)
